# Rust-n-Body-Simulation

./: .gitignore  Cargo.toml  README.md  UNLICENSE.txt
src/graphics/: mod.rs  orbital_trail.rs
src/system/: body.rs  horizons_cgi.rs  mod.rs
tests/: simulation.rs
